fix z-index header

--- a/css/style.css
+++ b/css/style.css
@@ -1008,6 +1008,7 @@ footer i,
     top: 0;
     left: 0;
     right: 0;
+    z-index: 2000;
 }
 
 .page-about_navbar {
